src/test/ui/feature-gate-allow_fail.stderr
error[E0658]: allow_fail attribute is currently unstable (see issue #42219)
  --> $DIR/feature-gate-allow_fail.rs:13:1
   |
LL | #[allow_fail] //~ ERROR allow_fail attribute is currently unstable
   | ^^^^^^^^^^^^^
   |
   = help: add #![feature(allow_fail)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
